--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   scoped_model: ^0.3.0
   lazy_load_scrollview: ^0.0.2
   photo_view: ^0.0.10
+  carousel_pro: ^0.0.13
+  flutter_rating: ^0.0.2
 
 dev_dependencies:
   flutter_test:
